--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,41 @@
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
-.App-header {
-  background-color: #282c34;
+.img {
+  width: 40px;
+  padding: 10px;
+}
+
+.header {
   display: flex;
+  justify-content: center;
+  background-color: #282c34;
+  width: 100%;
   flex-direction: row;
   align-items: center;
-  justify-content: space-evenly;
   color: white;
-  padding: 20px;
+  padding: 10px;
 }
 
-@media (max-width: 600px) {
-  .movie-card {
-    width: 100%;
-  }
+main {
+  flex: 1;
+  margin-bottom: 60px;
+}
 
-  .search-bar {
-    flex-direction: column;
-    gap: 10px;
-  }
+.footer {
+  background-color: #282c34;
+  color: white;
+  padding: 10px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  text-align: end;
+}
 
-  .search-bar form {
-    flex-direction: column;
-  }
+.footer p {
+  padding-right: 20px;
 }
